--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -1,72 +1,61 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppointmentSimulator.Pages.MainPage">
+             xmlns:vm="clr-namespace:AppointmentSimulator.ViewModels"
+             x:Class="AppointmentSimulator.Pages.MainPage"
+             Title="Citas">
+
+    <ContentPage.BindingContext>
+        <vm:AppointmentViewModel />
+    </ContentPage.BindingContext>
 
     <ScrollView>
-        <VerticalStackLayout Padding="20"
-                             Spacing="15">
+        <VerticalStackLayout Padding="20" Spacing="15">
 
-            <CollectionView x:Name="AppointmentsCollectionView"
-                            SelectionMode="Single">
+            <CollectionView ItemsSource="{Binding Appointments}"
+                            SelectionMode="Single"
+                            SelectedItem="{Binding SelectedAppointment}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid Padding="5">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
-                                <RowDefinition></RowDefinition>
-                                <RowDefinition></RowDefinition>
-                                <RowDefinition></RowDefinition>
-                                <RowDefinition></RowDefinition>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
                             </Grid.RowDefinitions>
 
-                            <Label Text="Nombre:"
-                                   Grid.Column="0"
-                                   Grid.Row="0" 
-                                   FontAttributes="Bold"/>
-                            <Label Text="Asunto"
-                                   Grid.Column="0"
-                                   Grid.Row="1"
-                                   FontAttributes="Bold" />
-                            <Label Text="Fecha de la cita:"
-                                   Grid.Column="0"
-                                   Grid.Row="2"
-                                   FontAttributes="Bold" />
-                            <Label Text="Hora:"
-                                   Grid.Column="0"
-                                   Grid.Row="3"
-                                   FontAttributes="Bold" />
+                            <Label Text="Nombre:" Grid.Column="0" Grid.Row="0" FontAttributes="Bold"/>
+                            <Label Text="Asunto:" Grid.Column="0" Grid.Row="1" FontAttributes="Bold"/>
+                            <Label Text="Fecha de la cita:" Grid.Column="0" Grid.Row="2" FontAttributes="Bold"/>
+                            <Label Text="Hora:" Grid.Column="0" Grid.Row="3" FontAttributes="Bold"/>
 
-                            <Label Text="{Binding Name}"
-                                   Grid.Column="1"
-                                   Grid.Row="0" />
-                            <Label Text="{Binding Subject}"
-                                   Grid.Column="1"
-                                   Grid.Row="1" />
-                            <Label Text="{Binding AppointmentDate, StringFormat='{dd/MM/yyyy}'}"
-                                   Grid.Column="1"
-                                   Grid.Row="2" />
-                            <HorizontalStackLayout Grid.Column="1"
-                                                   Grid.Row="3">
-                                <Label Text="{Binding StartingTime, StringFormat='{HH:mm}'}" />
-                                <Label>-</Label>
-                                <Label Text="{Binding EndingTime, StringFormat='{HH:mm}'}" />
+                            <Label Text="{Binding Name}" Grid.Column="1" Grid.Row="0"/>
+                            <Label Text="{Binding Subject}" Grid.Column="1" Grid.Row="1"/>
+                            <Label Text="{Binding AppointmentDate, StringFormat='{0:dd/MM/yyyy}'}"
+                                   Grid.Column="1" Grid.Row="2"/>
+
+                            <HorizontalStackLayout Grid.Column="1" Grid.Row="3">
+                                <Label Text="{Binding StartingTime, StringFormat='{0:hh\\:mm}'}" />
+                                <Label Text=" - " />
+                                <Label Text="{Binding EndingTime, StringFormat='{0:hh\\:mm}'}" />
                             </HorizontalStackLayout>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
+
             <HorizontalStackLayout VerticalOptions="Center"
-                                   HorizontalOptions="Center"
-                                   Spacing="10">
-                <Button Text="Agregar Cita" />
-                <Button Text="Eliminar Cita Seleccionada" />
+                       HorizontalOptions="Center"
+                       Spacing="10">
+                <Button Text="Agregar Cita" Clicked="OnAddClicked" />
+                <Button Text="Eliminar Cita Seleccionada" Command="{Binding DeleteAppointmentCommand}" />
             </HorizontalStackLayout>
 
         </VerticalStackLayout>
     </ScrollView>
-
 </ContentPage>
